--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "@nestjs/swagger": "^5.2.1",
     "fastify-swagger": "^5.2.0",
     "mongoose": "^6.3.1",
+    "nest-winston": "^1.6.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
